--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body { max-width: 90ch; margin: auto }
 
-label > span { min-width: 15ch; display:block }
+label > span { width: 15ch; display:block; float:left; text-align:right; padding:1ch }
