--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
-body { max-width: 90ch; margin: auto }
-
+body { max-width: 100ch; margin: auto; font: "handwriting", sans-serif; }
+p { max-width: 90ch; }
+fieldset { padding: 0; border: none; }
 label > span { width: 15ch; display:block; float:left; text-align:right; padding:1ch }
+label > input { border: none; border-bottom: 1px solid; width: 40ch; }
+label > textarea { width: 80ch; height: 30ch; font-size: .9em }
