finished a basic implementation of ymd rendering

--- a/share/text.mustache
+++ b/share/text.mustache
@@ -1,5 +1,10 @@
-{{title}}
-
-{{author_name}}
-
+<article>
+<h1>{{title}}</h1>
+<details>
+	<summary>{{abstract}}</summary>
+	<p>Topics: {{topics}}</p>
+	<a href="" rel="author">{{author_name}}</a>
+	<time datetime="{{date}}">{{date_human}}</time>
+</details>
 {{body}}
+</article>
