updated test font sass file location value

--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -2,7 +2,7 @@ $max-text-width: 80ch
 $font-face: sans-serif
 $font-url: "share/fonts"
 
-@import fonts/vollkorn/font.sass
+@import fonts/vollkorn.sass
 
 $colour-fg: black
 $colour-bg: snow
