--- a/share/sass/colours/teal.sass
+++ b/share/sass/colours/teal.sass
@@ -1,39 +1,39 @@
 // SASS style sheet */
 // Palette color codes */
-// Palette URL: http://paletton.com/#uid=23j0Q0kG0GUqn+SvcTIuSn7r09N */
+// Palette URL: http://paletton.com/#uid=23n0Q0kmQllem0Qkwa+pgwPr8Zy */
 
 // Feel free to copy&paste color codes to your application */
 
 
 // As hex codes */
 
-$color-primary-0: #01B7C0;	// Main Primary color */
-$color-primary-1: #2EF5FF;
-$color-primary-2: #07DEE8;
-$color-primary-3: #056B6F;
-$color-primary-4: #082D2F;
+$color-primary-0: #205B69;	// Main Primary color */
+$color-primary-1: #020404;
+$color-primary-2: #143036;
+$color-primary-3: #2589A0;
+$color-primary-4: #2CD3FB;
 
-$color-complement-0: #FF7600;	// Main Complement color */
-$color-complement-1: #FF8E2D;
-$color-complement-2: #FF7906;
-$color-complement-3: #B85907;
-$color-complement-4: #4E2B0C;
+$color-complement-0: #AA6D31;	// Main Complement color */
+$color-complement-1: #070504;
+$color-complement-2: #583B1F;
+$color-complement-3: #FF9A36;
+$color-complement-4: #FF9227;
 
 
 
 // As RGBa codes */
 
-$rgba-primary-0: rgba(  1,183,192,1);	// Main Primary color */
-$rgba-primary-1: rgba( 46,245,255,1);
-$rgba-primary-2: rgba(  7,222,232,1);
-$rgba-primary-3: rgba(  5,107,111,1);
-$rgba-primary-4: rgba(  8, 45, 47,1);
+$rgba-primary-0: rgba( 32, 91,105,1);	// Main Primary color */
+$rgba-primary-1: rgba(  2,  4,  4,1);
+$rgba-primary-2: rgba( 20, 48, 54,1);
+$rgba-primary-3: rgba( 37,137,160,1);
+$rgba-primary-4: rgba( 44,211,251,1);
 
-$rgba-complement-0: rgba(255,118,  0,1);	// Main Complement color */
-$rgba-complement-1: rgba(255,142, 45,1);
-$rgba-complement-2: rgba(255,121,  6,1);
-$rgba-complement-3: rgba(184, 89,  7,1);
-$rgba-complement-4: rgba( 78, 43, 12,1);
+$rgba-complement-0: rgba(170,109, 49,1);	// Main Complement color */
+$rgba-complement-1: rgba(  7,  5,  4,1);
+$rgba-complement-2: rgba( 88, 59, 31,1);
+$rgba-complement-3: rgba(255,154, 54,1);
+$rgba-complement-4: rgba(255,146, 39,1);
 
 
 
