added orbitron font and updated main.sass

--- a/share/sass/fonts/vollkorn.sass
+++ b/share/sass/fonts/vollkorn.sass
@@ -1,3 +1,15 @@
 @font-face
   font-family: "Vollkorn Regular"
-  src: ulr("#{$font-url}/vollkorn/Vollkorn-Regular.ttf")
+  src: url("#{$font-url}/vollkorn/Vollkorn-Regular.ttf")
+
+@font-face
+  font-family: "Vollkorn Bold"
+  src: url("#{$font-url}/vollkorn/Vollkorn-Bold.ttf")
+
+@font-face
+  font-family: "Vollkorn Italic"
+  src: url("#{$font-url}/vollkorn/Vollkorn-Italic.ttf")
+
+@font-face
+  font-family: "Vollkorn BoldItalic"
+  src: url("#{$font-url}/vollkorn/Vollkorn-BoldItalic.ttf")
