--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -3,7 +3,8 @@ $font-face: sans-serif
 $font-url: "/static/fonts"
 
 @import fonts/vollkorn.sass
-@import colours/teal.sass
+@import fonts/orbitron.sass
+@import colours/cyberlore.sass
 
 $colour-fg: $color-primary-4
 $colour-fg-high: $color-primary-4
