fixed orbitron font issues

--- a/share/sass/fonts/orbitron.sass
+++ b/share/sass/fonts/orbitron.sass
@@ -1,15 +1,15 @@
 @font-face
   font-family: "Orbitron Medium"
-  src: ulr("#{$font-url}/orbitron/Orbitron Medium.ttf")
+  src: url('#{$font-url}/orbitron/orbitron-medium.otf')
 
 @font-face
   font-family: "Orbitron Light"
-  src: ulr("#{$font-url}/orbitron/Orbitron Light.ttf")
+  src: url('#{$font-url}/orbitron/orbitron-light.otf')
 
 @font-face
   font-family: "Orbitron Bold"
-  src: ulr("#{$font-url}/orbitron/Orbitron Bold.ttf")
+  src: url('#{$font-url}/orbitron/orbitron-bold.otf')
 
 @font-face
   font-family: "Orbitron Black"
-  src: ulr("#{$font-url}/orbitron/Orbitron Black.ttf")
+  src: url('#{$font-url}/orbitron/orbitron-black.otf')
