--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -13,7 +13,7 @@ $colour-bg-high: $color-primary-2
 $colour-action: $color-complement-4
 
 body
-  font-family: $font-face
+  font-family: "Orbitron Light", $font-face
   font-weight: 100
   background-color: $colour-bg
   color: $colour-fg
@@ -75,6 +75,7 @@ header a:visited
   color: $colour-fg
 
 h1, h2, h3, h4, h5
+  font-face: "Orbitron Medium"
   text-align: center
   font-weight: 300
 
