--- a/share/sass/fonts/orbitron.sass
+++ b/share/sass/fonts/orbitron.sass
@@ -8,7 +8,7 @@
 
 @font-face
   font-family: "Orbitron Bold"
-  src: url('#{$font-url}/orbitron/orbitron-bold.otf')
+  src: url('#{$font-url}/orbitron/orbitron-bold.otf)
 
 @font-face
   font-family: "Orbitron Black"
