--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -65,7 +65,6 @@ a
 
 a:visited
   color: opacify($colour-action, 0.2)
-  text-decoration: none
 
 header a
   text-decoration: none
@@ -73,7 +72,7 @@ header a
 
 header a:visited
   color: $colour-fg
-
+OA
 h1, h2, h3, h4, h5
   font-face: "Orbitron Medium"
   text-align: center
@@ -84,3 +83,31 @@ footer
   margin-top: 2em
   border-top: 1px dotted 
   padding: 1em 0
+
+fieldset
+  border: .5mm dashed $colour-bg-high
+
+label
+  margin: .5em auto
+  min-width: 50%
+  display: inline-block
+  float: left
+
+input, textarea
+  color: $colour-fg
+  background-color: $colour-bg
+  border: none
+  border-bottom: .5mm solid $colour-bg-high
+  float: right
+  min-width: 100%
+
+textarea
+  border: .5mm solid $colour-bg-high
+  width: 80ch
+  display: block-inline
+  clear: both
+
+button
+  clear: both
+  display: block
+  margin: 1em auto
