more fields for article details

--- a/share/html_templates/text.mustache
+++ b/share/html_templates/text.mustache
@@ -2,9 +2,11 @@
 <h1>{{title}}</h1>
 <details>
 	<summary>{{abstract}}</summary>
-	<p>Topics: {{topics}}</p>
 	<a href="" rel="author">{{author_name}}</a>
 	<time datetime="{{date}}">{{date_human}}</time>
+	<span>Series: {{series}}</span>
+	<span>Topics: {{topics}}</span>
+	<span>Keywords: {{keywords}}</span>
 </details>
 {{body}}
 </article>
