uuid template tag

--- a/share/html_templates/text.mustache
+++ b/share/html_templates/text.mustache
@@ -7,6 +7,7 @@
 	<span>Series: {{series}}</span>
 	<span>Topics: {{topics}}</span>
 	<span>Keywords: {{keywords}}</span>
+	<span>UUID: {{uuid}}</span>
 </details>
 {{body}}
 </article>
