header link to feed

--- a/share/html_templates/header.mustache
+++ b/share/html_templates/header.mustache
@@ -1,1 +1,1 @@
-<header><h1><a href="{{blog_url}}">{{title}}</a></h1></header>
+<header><h1><a href="{{blog_url}}">{{title}}</a></h1><link rel="alternate" type="application/atom+xml" title="{{title}} feed" href="/feed.atom" /></header>
