--- a/share/static/main.css
+++ b/share/static/main.css
@@ -37,7 +37,7 @@ body {
   color: #99C2D8;
   max-width: 210mm; }
 
-body, article > * {
+body, body > *, article > * {
   margin: auto; }
 
 p, pre {
