--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -77,6 +77,7 @@ h1, h2, h3, h4, h5
   font-face: "Orbitron Medium"
   text-align: center
   font-weight: 300
+  margin: 3em auto 1em auto
 
 footer
   clear: both
