--- a/share/static/main.css
+++ b/share/static/main.css
@@ -94,7 +94,8 @@ header a:visited {
 h1, h2, h3, h4, h5 {
   font-face: "Orbitron Medium";
   text-align: center;
-  font-weight: 300; }
+  font-weight: 300;
+  margin: 3em auto 1em auto; }
 
 footer {
   clear: both;
