--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -27,12 +27,13 @@ p, pre
   text-align: justify
   text-justify: inter-word
 
-p, img, h1, h2, h3, h4, h5
+p, img, h1, h2, h3, h4, h5, article
   max-width: $max-text-width
 
 pre
   display: block
   max-width: $max-text-width
+  overflow: scroll
 
 ul, ol
   max-width: $max-text-width
