fixed mistake in header font syntax

--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -75,7 +75,7 @@ header a:visited
   color: $colour-fg
 
 h1, h2, h3, h4, h5
-  font-face: "Orbitron Medium"
+  font-family: "Orbitron Medium"
   text-align: center
   font-weight: 300
   margin: 3em auto 1em auto
