--- a/share/static/main.css
+++ b/share/static/main.css
@@ -93,7 +93,7 @@ header a:visited {
   color: #99C2D8; }
 
 h1, h2, h3, h4, h5 {
-  font-face: "Orbitron Medium";
+  font-family: "Orbitron Medium";
   text-align: center;
   font-weight: 300;
   margin: 3em auto 1em auto; }
