Adds Envy Code R

--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -1,9 +1,9 @@
 $max-text-width: 80ch
-$font-face: sans-serif
 $font-url: "/static/fonts"
 
 @import fonts/vollkorn.sass
 @import fonts/orbitron.sass
+@import fonts/envy.sass
 @import colours/cyberlore.sass
 
 $colour-fg: $color-primary-1
@@ -11,6 +11,8 @@ $colour-fg-high: $color-primary-2
 $colour-bg: $color-primary-4
 $colour-bg-high: $color-primary-3
 $colour-action: $color-secondary-1-1
+
+$font-face: "Envy Code R"
 
 body
   font-family: $font-face
@@ -77,8 +79,8 @@ header a:visited
 h1, h2, h3, h4, h5
   font-family: "Orbitron Medium"
   text-align: center
-  font-weight: 300
-  margin: 3em auto 1em auto
+  font-weight: 100
+  margin: 1em auto
 
 footer
   clear: both
