Revise default theme

--- a/share/html_templates/item.mustache
+++ b/share/html_templates/item.mustache
@@ -1,1 +1,7 @@
- <li><a href="{{url}}">{{date_human}} ~ {{title}}</a></li>
+<li><a href="{{url}}">
+	<time>{{date_human}}</time>
+	<div>
+		<span class="title">{{title}}</span>
+		<p class="abstract">{{abstract}}</p>
+	</div>
+</a></li>
