--- a/share/html_templates/list.mustache
+++ b/share/html_templates/list.mustache
@@ -1,7 +1,15 @@
-<h2>Topics</h2>
+<h3>Topics</h3>
 
+<ul class="topics">
 {{topics}}
+</ul>
 
-<h2>Recent articles</h2>
+<h3>Recent articles</h3>
 
+<ul class="timeline">
 {{recent_texts_listing}}
+</ul>
+
+<nav>
+{{navigation}}
+</nav>
