--- a/share/sass/main.sass
+++ b/share/sass/main.sass
@@ -10,14 +10,13 @@ $colour-bg: $color-primary-4
 $colour-bg-high: $color-primary-3
 $colour-action: $color-secondary-1-1
 
-$font-face: "Envy Code R"
+$font-face: "Sans"
 
 body
   font-family: $font-face
   font-weight: 100
   background-color: $colour-bg
   color: $colour-fg
-  max-width: 210mm
 
 body, body > *, article > *
   margin: auto
@@ -35,20 +34,40 @@ pre
   max-width: $max-text-width
   overflow: scroll
 
-ul, ol
-  max-width: $max-text-width
+.timeline
+  max-width: 210mm
 
-ul > li
-  list-style-type: square
+.timeline > li
+  position: relative
+  overflow: hidden
 
-ol > li
-  list-style-type: lower-greek
+.timeline > li time
+  float: left
+  width: 12ch
+  text-align: center
+  vertical-align: middle
 
-li > p
+.timeline > li div
+  float: left
+  padding: 0 0 1em 2ch
+  max-width: 60ch
+  border-left: 1mm solid;
+
+.abstract
+  opacity: .5
+
+.topics > li
   display: inline
+  margin-right: 2ch
+
+.topics
+  overflow: visible
+  display: block
+  clear: both
+  text-align: center
 
 details, header > h1
-  margin-bottom: 1em
+  margin-bottom: 1em $colour-bg-high
 
 header > h1
   font-family: "Orbitron Light"
