Create a light and a dark theme, with timelines
Simplify themes.
Deleted expansive colour sass file for now; don't see the point in that complexity at this stage.

--- a/share/html_templates/item.mustache
+++ b/share/html_templates/item.mustache
@@ -1,7 +1,7 @@
-<li><a href="{{url}}">
+<li>
 	<time>{{date_human}}</time>
 	<div>
-		<span class="title">{{title}}</span>
+		<a href="{{url}}" class="title">{{title}}</a>
 		<p class="abstract">{{abstract}}</p>
 	</div>
-</a></li>
+</li>
