--- a/share/static/main.css
+++ b/share/static/main.css
@@ -15,16 +15,12 @@
   src: url("/static/fonts/orbitron/orbitron-black.otf"); }
 
 body {
-  font-family: "Sans";
-  font-weight: 100;
-  background-color: #00141E;
-  color: #99C2D8; }
+  font-family: "sans-serif"; }
 
 body, body > *, article > * {
   margin: auto; }
 
 p, pre {
-  margin: 1em auto;
   text-align: justify;
   text-justify: inter-word; }
 
@@ -33,43 +29,11 @@ p, img, h1, h2, h3, h4, h5, article {
 
 pre {
   display: block;
-  max-width: 80ch;
-  overflow: scroll; }
+  overflow: auto;
+  padding-left: 1ch; }
 
-.timeline {
-  max-width: 210mm; }
-
-.timeline > li {
-  position: relative;
-  overflow: hidden; }
-
-.timeline > li time {
-  float: left;
-  width: 12ch;
-  text-align: center;
-  vertical-align: middle; }
-
-.timeline > li div {
-  float: left;
-  padding: 0 0 1em 2ch;
-  max-width: 60ch;
-  border-left: 1mm solid; }
-
-.abstract {
-  opacity: .5; }
-
-.topics > li {
-  display: inline;
-  margin-right: 2ch; }
-
-.topics {
-  overflow: visible;
-  display: block;
-  clear: both;
-  text-align: center; }
-
-details, header > h1 {
-  margin-bottom: 1em #034060; }
+details, header > h1, p, pre, ul, ol {
+  margin: 1em auto; }
 
 header > h1 {
   font-family: "Orbitron Light";
@@ -81,25 +45,20 @@ details, details > * {
 header, footer, details, details > * {
   text-align: center; }
 
-a {
-  color: #D6F6AA;
+a, header a, header a:hover {
   text-decoration: none; }
 
 a:visited {
-  color: #d6f6aa; }
+  opacity: .8; }
 
-header a {
-  text-decoration: none;
-  color: #99C2D8; }
-
-header a:visited {
-  color: #99C2D8; }
+a:hover {
+  text-decoration: underline; }
 
 h1, h2, h3, h4, h5 {
   font-family: "Orbitron Medium";
   text-align: center;
   font-weight: 100;
-  margin: 1em auto; }
+  margin: 2em auto 1em; }
 
 footer {
   clear: both;
@@ -108,7 +67,7 @@ footer {
   padding: 1em 0; }
 
 fieldset {
-  border: 0.5mm dashed #034060; }
+  border: .5mm dashed; }
 
 fieldset > p {
   margin: .5em auto;
@@ -121,14 +80,12 @@ label {
 
 input, textarea {
   display: block;
-  color: #99C2D8;
-  background-color: #00141E;
   border: none;
-  border-bottom: 0.5mm solid #034060;
+  border-bottom: .5mm solid;
   min-width: 100%; }
 
 textarea {
-  border: 0.5mm solid #034060;
+  border: .5mm solid;
   width: 80ch;
   height: 40ch;
   display: block-inline;
@@ -138,6 +95,43 @@ button {
   clear: both;
   display: block;
   margin: 1em auto;
-  color: #99C2D8;
-  background-color: #034060;
-  border: 0.5mm solid #034060; }
+  border: .5mm solid; }
+
+.timeline {
+  width: 90ch; }
+
+.timeline > li {
+  position: relative;
+  overflow: hidden; }
+
+.timeline > li time {
+  float: left;
+  width: 14ch;
+  text-align: center; }
+
+.timeline > li div {
+  float: left;
+  padding: 0 0 1em 2ch;
+  width: 60%; }
+
+summary, .abstract {
+  opacity: .5; }
+
+.topics > li {
+  display: inline;
+  margin-right: 2ch; }
+
+.topics {
+  overflow: visible;
+  display: block;
+  clear: both;
+  text-align: center; }
+
+body {
+  background-color: #191B22; }
+
+body, a, header a:visited {
+  color: #f2f2f2; }
+
+pre, .timeline > li div {
+  border-left: 1mm solid #f2f2f233; }
